brat/test/golden/error/apply_two_thunks.brat.golden
Error in test/golden/error/apply_two_thunks.brat@FC {start = Pos {line = 9, col = 9}, end = Pos {line = 9, col = 18}}:
go(n) = thunks(n)
        ^^^^^^^^^

  Type error: Expected function thunks() to consume all of its arguments (「n」)
 but found leftovers: (a1 :: Int)

